// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Spin default 1`] = `
<div
  class="arco-spin arco-spin-inline-block"
>
  <span
    class="arco-spin-icon"
  >
    <svg
      class="arco-icon arco-icon-loading"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
      width="1em"
    >
      <path
        d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
      />
    </svg>
  </span>
</div>
`;

exports[`ConfigProvider componentConfig.Spin set className globally 1`] = `
<div
  class="arco-spin arco-spin-inline-block global-default-class"
>
  <span
    class="arco-spin-icon"
  >
    <svg
      class="arco-icon arco-icon-loading"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
      width="1em"
    >
      <path
        d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
      />
    </svg>
  </span>
</div>
`;

exports[`ConfigProvider componentConfig.Spin set className globally and component set className itself. 1`] = `
<div
  class="arco-spin arco-spin-inline-block component-class"
>
  <span
    class="arco-spin-icon"
  >
    <svg
      class="arco-icon arco-icon-loading"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-width="4"
      viewBox="0 0 48 48"
      width="1em"
    >
      <path
        d="M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6"
      />
    </svg>
  </span>
</div>
`;
